# rust-toy-api

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml
api/: Cargo.toml
app/: brunch-config.js  package.json
app/elm/: main.elm
app/js/: app.js
public/: 404.html  index.html
src/: db.rs  main.rs  models.rs  routes.rs  static_files.rs
