[package]
name = "api"
version = "0.1.0"
authors = ["VentGrey <omarpurataf@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = { git = "https://github.com/greyblake/rust-dotenv" }
