[package]
name = "api"
version = "0.1.0"
authors = ["VentGrey <omarpurataf@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = { git = "https://github.com/greyblake/rust-dotenv" }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"

# Rocket
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["json"] }
